# satviz

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.gradle.kts  run_satviz.sh  settings.gradle.kts
.github/workflows/: gradle.yml
config/checkstyle/: google_checks.xml
satviz-common/: build.gradle.kts
satviz-common/src/main/java/: module-info.java
satviz-common/src/main/java/edu/kit/satviz/common/: Compression.java  Constraint.java  ConstraintValidationException.java  FileExistsConstraint.java  Hashing.java  PathArgumentType.java
satviz-common/src/test/java/edu/kit/satviz/common/: CompressionTest.java  ConstraintTest.java  FileExistsConstraintTest.java  HashingTest.java  PathArgumentTypeTest.java
satviz-common/src/test/resources/: comp_test.txt.xz  hash_test.txt
satviz-config/: build.gradle.kts
satviz-consumer/: build.gradle.kts
satviz-consumer-native/: CMakeLists.txt  build.gradle.kts
satviz-consumer-native/cmake/: FindTHEORA.cmake  embed.cmake
satviz-consumer-native/include/glad/: gl.h
satviz-consumer-native/include/satviz/: Bindings.h  Camera.hpp  Display.hpp  GlUtils.hpp  Graph.hpp  GraphContraction.hpp  GraphObserver.hpp  GraphRenderer.hpp  OffscreenDisplay.hpp  OnscreenDisplay.hpp  Theme.h  TheoraEncoder.hpp  VideoController.hpp  VideoEncoder.hpp  VideoFrame.hpp  YCbCr.hpp  info.h
satviz-consumer-native/src/: Bindings.cpp
satviz-consumer-native/src/dummy/: CMakeLists.txt  Main.cpp
satviz-consumer-native/src/glad/: CMakeLists.txt  gl.c
satviz-consumer-native/src/satviz/: Bindings.cpp  CMakeLists.txt  Camera.cpp  Display.cpp  EdgeShader.frag  EdgeShader.vert  GlUtils.cpp  Graph.cpp  GraphContraction.cpp  GraphRenderer.cpp  NodeShader.frag  NodeShader.vert  OffscreenDisplay.cpp  OnscreenDisplay.cpp  TheoraEncoder.cpp  VideoController.cpp  VideoFrame.cpp  edge.vert  node.vert
satviz-consumer-native/test/: CMakeLists.txt  Display.cpp  Graph.cpp  GraphContraction.cpp  Test.cpp  VideoFrame.cpp  YCbCr.cpp
satviz-consumer/src/main/java/: module-info.java
satviz-consumer/src/main/java/edu/kit/satviz/consumer/: ConsumerApplication.java
satviz-consumer/src/main/java/edu/kit/satviz/consumer/bindings/: EdgeInfo.java  Graph.java  InitializationError.java  NativeInitializationError.java  NativeInvocationException.java  NativeLibraryLoader.java  NativeObject.java  NodeInfo.java  Struct.java
satviz-consumer/src/main/resources/: embedded-config.fxml  external-config.fxml  general-config.fxml
satviz-consumer/src/test/resources/: config1.json  config2.json  config3.json  faulty_config1.json
satviz-graph/: build.gradle.kts
satviz-gui/: build.gradle.kts
satviz-network/: build.gradle.kts
satviz-network/src/main/java/: module-info.java
satviz-network/src/main/java/edu/kit/satviz/network/: AbstractConnectionManager.java  ClientConnectionManager.java  ConnectionContext.java  ConnectionId.java  ConnectionManager.java  ConsumerConnection.java  ConsumerConnectionListener.java  ConsumerConnectionManager.java  ConsumerDemo.java  MessageTypes.java  NetworkBlueprint.java  NetworkMessage.java  NetworkObject.java  NullSerialBuilder.java  NullSerializer.java  OfferType.java  ProducerConnection.java  ProducerConnectionListener.java  ProducerDemo.java  ProducerId.java  Receiver.java  ServerConnectionManager.java
satviz-network/src/test/java/edu/kit/satviz/network/: ConnectionTest.java  ContextTest.java  GeneralConnectionTest.java  NetworkBlueprintTest.java  NullSerializeTest.java  ProducerConsumerTest.java  ProducerConsumerTest2.java  ReceiverTest.java
satviz-parsers/: build.gradle.kts
satviz-parsers/src/main/java/: module-info.java
satviz-parsers/src/main/java/edu/kit/satviz/parsers/: ClauseFile.java  ClauseParsingIterator.java  DimacsFile.java  DimacsParsingIterator.java  DratFile.java  DratParsingIterator.java  ParsingException.java
satviz-parsers/src/test/java/edu/kit/satviz/parsers/: DimacsFileTest.java  DratFileTest.java
satviz-parsers/src/test/resources/dimacs_ex/: aim-100-1_6-no-1.cnf  invalid1-simple_v3_c2.cnf  invalid2-simple_v3_c2.cnf  invalid3-simple_v3_c2.cnf  simple_v3_c2.cnf
satviz-parsers/src/test/resources/drat_ex/: example-5-vars.drat  examples-4-vars.drat
satviz-processing/: build.gradle.kts
satviz-producer/: build.gradle.kts  module-info.java
satviz-producer/src/main/java/: module-info.java
satviz-producer/src/main/java/edu/kit/satviz/producer/: ClauseSource.java  ConnectionListener.java  ProducerApplication.java  ProducerMode.java  ProducerModeData.java  SourceControlConnectionListener.java  SourceException.java  SourceOpeningException.java
satviz-producer/src/test/java/edu/kit/satviz/producer/: ProducerApplicationTest.java  ProducerCliTest.java  ProducerConstraintsTest.java  ResourceHelper.java  SolverParams.java  SourceControlConnectionListenerTest.java
satviz-producer/src/test/resources/: instance-broken.cnf  instance.cnf  proof.drat
satviz-sat/src/main/java/: module-info.java
satviz-sat/src/main/java/edu/kit/satviz/sat/: Clause.java  ClauseUpdate.java  SatAssignment.java  Type.java
satviz-sat/src/test/java/: SatAssignmentTest.java
satviz-sat/src/test/java/edu/kit/satviz/sat/: ClauseTest.java  ClauseUpdateTest.java  SatAssignmentTest.java
satviz-serial/: build.gradle.kts
satviz-serial/src/main/java/: module-info.java
satviz-serial/src/main/java/edu/kit/satviz/serial/: ClauseSerialBuilder.java  ClauseSerializer.java  ClauseUpdateSerialBuilder.java  ClauseUpdateSerializer.java  IntSerialBuilder.java  IntSerializer.java  NullSerialBuilder.java  NullSerializer.java  SatAssignmentSerialBuilder.java  SatAssignmentSerializer.java  SerialBuilder.java  SerializationException.java  Serializer.java  StringMapSerialBuilder.java  StringMapSerializer.java  StringSerialBuilder.java  StringSerializer.java
satviz-serial/src/test/java/edu/kit/satviz/serial/: ByteArrayInputStream.java  ByteArrayOutputStream.java  ClauseTest.java  ClauseUpdateSerializerTest.java  IntSerialBuilderTest.java  IntSerializerTest.java  SatAssignmentTest.java  StringMapTest.java  StringTest.java
(+114 files in other folders)
